...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/full_pet_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pet_name"
                android:textSize="30sp" />

...
            android:fontFamily="sans-serif"
            android:text="@string/pet_type"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_type_dog"
            android:textSize="25dp" />

...
            android:fontFamily="sans-serif"
            android:text="@string/pet_breed"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_breed_husky"
            android:textSize="25dp" />

...
            android:fontFamily="sans-serif"
            android:text="@string/pet_age"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/pet_age_1_year"
            android:textSize="25dp" />

...
            android:fontFamily="sans-serif"
            android:text="@string/purpose"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/full_pet_info_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/purpose_friendship"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/full_pet_info_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/pet_info_text" />
...
